United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7146729 nightly failure after 7141200: tty is sometimes null during shutdown of main thread
7146729 : nightly failure after 7141200: tty is sometimes null during shutdown of main thread

Details
Type:
Bug
Submit Date:
2012-02-17
Status:
Closed
Updated Date:
2012-03-24
Project Name:
JDK
Resolved Date:
2012-03-24
Component:
hotspot
OS:
solaris_10
Sub-Component:
runtime
CPU:
x86
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs23
Fixed Versions:
hs23

Related Reports
Backport:
Backport:

Sub Tasks

Description
I can't reproduce this but there are 3 crashes like this in the nightlies

http://sqeweb.us.oracle.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2012-02-16/Comp_Baseline/vm/linux-amd64/server/comp/linux-amd64_vm_server_comp_vm.runtime.testlist/ResultDir/hashCodeTest/hs_err_pid11278.log

Stack: [0x0000000043c32000,0x0000000043d33000],  sp=0x0000000043d31b20,  free space=1022k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0xc1a51c]  TimeStamp::seconds() const+0xc;;  TimeStamp::seconds() const+0xc
V  [libjvm.so+0x5fa9d6]  StringEventLog::logv(Thread*, char const*, __va_list_tag*)+0x66;;  StringEventLog::logv(Thread*, char const*, __va_list_tag*)+0x66
V  [libjvm.so+0x5fac19]  Events::log(Thread*, char const*, ...)+0xb9;;  Events::log(Thread*, char const*, ...)+0xb9
V  [libjvm.so+0xc0e728]  JavaThread::exit(bool, JavaThread::ExitType)+0xc08;;  JavaThread::exit(bool, JavaThread::ExitType)+0xc08
V  [libjvm.so+0xc0f0b9]  JavaThread::thread_main_inner()+0x99;;  JavaThread::thread_main_inner()+0x99
V  [libjvm.so+0xc0f46f]  JavaThread::run()+0x25f;;  JavaThread::run()+0x25f
V  [libjvm.so+0xa68690]  java_start(Thread*)+0x100;;  _ZL10java_startP6Thread+0x100

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/72c425c46102
                                     
2012-03-22
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/72c425c46102
                                     
2012-02-18
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/72c425c46102
                                     
2012-02-18
EVALUATION

7146729: nightly failure after 7141200: tty is sometimes null during shutdown of main thread
Reviewed-by: kvn

Sometimes during shutdown tty is NULL so used os::elapsedTime instead
which produces the same value.
                                     
2012-02-18



Hardware and Software, Engineered to Work Together