7146729: nightly failure after 7141200: tty is sometimes null during shutdown of main thread

Reviewed-by: kvn